--- a/pom.xml
+++ b/pom.xml
@@ -93,10 +93,9 @@
 			<version>42.2.14</version>
 		</dependency>
 		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
 		</dependency>
-
 	</dependencies>
 
 	<build>
