--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=postgres
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 
-
+spring.liquibase.change-log=classpath:db/changelog/changelog.sql
 #spring.datasource.url=jdbc:postgresql://localhost:5432/app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
