--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,10 +1,10 @@
 {
-     "branches": "main",
-     "repositoryUrl": "https://github.com/cyse7125-fall2023-group03/webapp.git",
-     "debug": "true",
-     "plugins": [
-        "@semantic-release/commit-analyzer",
-        "@semantic-release/release-notes-generator",
-        "@semantic-release/github"
-    ]
+  "branches": [
+    "main"
+  ],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/github" 
+  ]
 }
