chore: added http check apis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.liquibase.change-log=classpath:db/changelog/changelog.sql
 ##spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto=update
 server.port=8082
+
+# Enable actuator endpoints
+management.endpoints.web.exposure.include=*
+
+# Configure readiness and liveness probe paths
+management.endpoint.health.group.readiness.include=ready
+management.endpoint.health.group.liveness.include=liveness
