--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.show-sql=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.show-sql=true
+
+spring.liquibase.change-log=classpath:db/changelog/changelog.sql
 
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 
-spring.liquibase.change-log=classpath:db/changelog/changelog.sql
-#spring.datasource.url=jdbc:postgresql://localhost:5432/app?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
 ##4ABCDEF
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
@@ -22,9 +24,7 @@ spring.liquibase.change-log=classpath:db/changelog/changelog.sql
 #spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 
-# Enable actuator endpoints
+#liveness and readiness probe
 management.endpoints.web.exposure.include=*
-
-# Configure readiness and liveness probe paths
 management.endpoint.health.group.readiness.include=ready
 management.endpoint.health.group.liveness.include=liveness
