--- a/src/main/resources/crd.yaml
+++ b/src/main/resources/crd.yaml
@@ -1,9 +1,18 @@
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: animals.jungle.example.com
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.13.0
+  name: healthchecks.webapp.udaykk.me
 spec:
-  group: jungle.example.com
+  group: webapp.udaykk.me
+  names:
+    kind: Healthcheck
+    listKind: HealthcheckList
+    plural: healthchecks
+    singular: healthcheck
+  scope: Namespaced
   versions:
     - name: v1
       served: true
@@ -19,10 +28,7 @@ spec:
                   type: string
                     # Set dynamic value for image name
                   default: ${IMAGE_NAME}
-  scope: Namespaced
-  names:
-    plural: animals
-    singular: animal
-    kind: Animal
-    shortNames:
-      - al
+    served: true
+    storage: true
+    subresources:
+      status: {}
