--- a/src/main/resources/crd.yaml
+++ b/src/main/resources/crd.yaml
@@ -1,18 +1,9 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
   name: healthchecks.webapp.udaykk.me
 spec:
   group: webapp.udaykk.me
-  names:
-    kind: Healthcheck
-    listKind: HealthcheckList
-    plural: healthchecks
-    singular: healthcheck
-  scope: Namespaced
   versions:
     - name: v1
       served: true
@@ -26,9 +17,10 @@ spec:
               properties:
                 image:
                   type: string
-                    # Set dynamic value for image name
-                  default: ${IMAGE_NAME}
-    served: true
-    storage: true
-    subresources:
-      status: {}
+  scope: Namespaced
+  names:
+    kind: Healthcheck
+    plural: healthchecks   # Specify the plural name
+    singular: healthcheck  # Specify the singular name
+  subresources:
+    status: {}
